@@ -1,5 +1,6 @@
 # Add changes at the top of the list. Keep it in ASCII, and 80-char wide.
 # Do not insert empty lines here, update check depends on it.
+  - feature: 50_HP1000: new module to support HP1000 weather station
   - feature: new module 53_GHoma.pm added (klausw)
   - feature: 14_CUL_REDIRECT: Rename 14_CUL_OTHER to 14_CUL_REDIRECT
   - bugfix:  00_SIGNALduino:
